<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flightlog Calc</string>
    <string name="action_settings">Settings</string>
    <string name="dummy">00:00</string>
    <string name="out">Out</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="in">In</string>
    <string name="flight">Flight</string>
    <string name="block">Block</string>
    <string name="total_flight_time">Total Flight Time</string>
    <string name="total_block_time">Total Block Time</string>
    <string name="menu_item_exit">Exit</string>
    <string name="toast_enter_valid_time">You Must Enter a Valid Time.</string>

</resources>
